# Pixel

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  format_files.py
src/: CMakeLists.txt  UpdateContext.h  render.cc  render.h  run.cc  run.h  update_context.h
src/core/: types.h
src/core/math/: random.cc  random.h
src/input/: keyboard.h  mouse.h  sdl_keyboard.cc  sdl_keyboard.h  sdl_mouse.cc  sdl_mouse.h
src/platform/windows/: windows_main.cc
